--- a/Make_stored_DATA/mels_cnn_1.ipynb
+++ b/Make_stored_DATA/mels_cnn_1.ipynb
@@ -26,7 +26,6 @@
     "import random\n",
     "import librosa\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import KFold\n",
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "237ecd5a-b3d4-4cbe-9721-c3d08977d661",
    "metadata": {},
    "outputs": [
@@ -325,7 +324,7 @@
      "text": [
       "Train data have lebel normal : 49.58% and have lebel abnormal : 50.42%\n",
       "Validation data have lebel normal : 49.94% and have lebel abnormal : 50.06%\n",
-      "Validation data have lebel normal : 50.20% and have lebel abnormal : 49.80%\n"
+      "Test data have lebel normal : 50.20% and have lebel abnormal : 49.80%\n"
      ]
     }
    ],
