--- a/Make_stored_DATA/mels_rnn_1.ipynb
+++ b/Make_stored_DATA/mels_rnn_1.ipynb
@@ -22,34 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import gc\n",
     "import glob\n",
     "import random\n",
     "import librosa\n",
-    "import IPython.display\n",
-    "import librosa.display\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import tensorflow as tf\n",
-    "import matplotlib as plt\n",
-    "import IPython.display as ipd\n",
-    "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
-    "from collections import Counter\n",
-    "from scipy.interpolate import interp1d\n",
-    "from scipy.signal import butter, lfilter\n",
-    "from tensorflow.keras import models, layers, Input\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from tensorflow.keras.layers import Input, Conv2D, BatchNormalization, Activation, MaxPooling2D, Dropout, Reshape, LSTM, Dense\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, LearningRateScheduler, ReduceLROnPlateau\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.regularizers import l2\n",
-    "from sklearn.utils import shuffle\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, accuracy_score, precision_score, recall_score, f1_score, roc_curve, auc, roc_auc_score\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split, KFold"
+    "from sklearn.model_selection import KFold\n",
+    "from imblearn.under_sampling import RandomUnderSampler"
    ]
   },
   {
@@ -62,37 +42,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3240,)\n"
+      "(2620,) (620,)\n"
      ]
     }
    ],
    "source": [
-    "heart_sound = glob.glob('../../heart-new/training/*.wav')\n",
-    "print(np.shape(heart_sound))"
+    "heart_sound_all = glob.glob('../../heart-new/training/*.wav')\n",
+    "heart_sound, heart_sound_test = heart_sound_all[:2620], heart_sound_all[2620:]\n",
+    "print(np.shape(heart_sound),np.shape(heart_sound_test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c418dff6-26a5-4c10-b2bc-966a907a9a4e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3240,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('../../heart-new/lebel-all/RECORDS') as file:Record=file.read().splitlines()\n",
-    "print(np.shape(Record))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "261db4d2-891c-4474-af80-291deb1d7739",
    "metadata": {},
    "outputs": [
@@ -100,11 +62,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3240,)\n"
+      "(2620,) (620,)\n"
      ]
     }
    ],
    "source": [
+    "with open('../../heart-new/label-all/RECORDS') as file:Record=file.read().splitlines()\n",
+    "\n",
     "def process_labels(folder):\n",
     "    with open(f'../../heart-new/{folder}/RECORDS') as file:\n",
     "        records = file.read().splitlines()\n",
@@ -119,14 +83,15 @@
     "    label_list = list(reordered_dict.values())\n",
     "    return label_list\n",
     "\n",
-    "LEBEL_list = process_labels('lebel-all')\n",
-    "LEBEL_array = np.array(LEBEL_list)\n",
-    "print(np.shape(LEBEL_array))"
+    "LABEL_list_all = process_labels('label-all')\n",
+    "LABEL_list, LABEL_list_test = LABEL_list_all[:2620], LABEL_list_all[2620:]\n",
+    "LABEL_array, LABEL_array_test = np.array(LABEL_list), np.array(LABEL_list_test)\n",
+    "print(np.shape(LABEL_array), np.shape(LABEL_array_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e24a5d69-1fad-4e66-a077-8f23e24b6edc",
    "metadata": {},
    "outputs": [],
@@ -177,12 +142,12 @@
     "            segment_labels.append(label)\n",
     "    return segments, segment_labels\n",
     "\n",
-    "def double_shuffle(signals, lebels):\n",
-    "    Z = list(zip(signals, lebels))\n",
+    "def double_shuffle(signals, labels):\n",
+    "    Z = list(zip(signals, labels))\n",
     "    random.Random(seed).shuffle(Z)\n",
-    "    shuffled_data, shuffled_lebel = zip(*Z)\n",
-    "    shuffled_data, shuffled_lebel = np.array(shuffled_data), np.array(shuffled_lebel)\n",
-    "    return shuffled_data, shuffled_lebel\n",
+    "    shuffled_data, shuffled_label = zip(*Z)\n",
+    "    shuffled_data, shuffled_label = np.array(shuffled_data), np.array(shuffled_label)\n",
+    "    return shuffled_data, shuffled_label\n",
     "\n",
     "def balance_classes(signals, labels):\n",
     "    signals = np.array(signals, dtype=np.float16)\n",
@@ -204,19 +169,19 @@
     "        mel_spectrograms.append(mel_spectrogram_reshaped)\n",
     "    return np.array(mel_spectrograms, dtype=np.float32)\n",
     "\n",
-    "def preprocessing(signals, lebels, length=-1):\n",
-    "    signals_windowed, lebels_windowed = sliding_window(signals, lebels)\n",
-    "    signals_balanced, lebels_balanced = balance_classes(signals_windowed, lebels_windowed)\n",
-    "    signals_shuffled, lebels_shuffled = double_shuffle(signals_balanced, lebels_balanced)\n",
-    "    signals_reshaped, lebels_reshaped = signals_shuffled[:length], lebels_shuffled[:length]\n",
+    "def preprocessing(signals, labels, length=-1):\n",
+    "    signals_windowed, labels_windowed = sliding_window(signals, labels)\n",
+    "    signals_balanced, labels_balanced = balance_classes(signals_windowed, labels_windowed)\n",
+    "    signals_shuffled, labels_shuffled = double_shuffle(signals_balanced, labels_balanced)\n",
+    "    signals_reshaped, labels_reshaped = signals_shuffled[:length], labels_shuffled[:length]\n",
     "    signal = extract_features(signals_reshaped)\n",
-    "    lebel = list(lebels_reshaped)\n",
-    "    return signal, lebel"
+    "    label = list(labels_reshaped)\n",
+    "    return signal, label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a6b3b44b-0067-4513-b487-8ac1959a1220",
    "metadata": {},
    "outputs": [
@@ -224,14 +189,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessing entire dataset...\n"
+      "Preprocessing train & validation dataset...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                         "
+      "                                                                         \r"
      ]
     },
     {
@@ -243,13 +208,13 @@
     }
    ],
    "source": [
-    "print(\"Preprocessing entire dataset...\")\n",
+    "print(\"Preprocessing train & validation dataset...\")\n",
     "DATA_array = load_data(heart_sound)\n",
-    "Training_data, Training_lebel, augmented_data, augmented_lebel = augment_data(DATA_array, LEBEL_array)\n",
-    "Training_data_preprocessed, Training_lebel_preprocessed = preprocessing(Training_data, Training_lebel)\n",
-    "augmented_data_preprocessed, augmented_lebel_preprocessed = preprocessing(augmented_data, augmented_lebel, length=10000-np.shape(Training_lebel_preprocessed)[0])\n",
+    "Training_data, Training_label, augmented_data, augmented_label = augment_data(DATA_array, LABEL_array)\n",
+    "Training_data_preprocessed, Training_label_preprocessed = preprocessing(Training_data, Training_label)\n",
+    "augmented_data_preprocessed, augmented_label_preprocessed = preprocessing(augmented_data, augmented_label, length=9000-np.shape(Training_label_preprocessed)[0])\n",
     "DATA = np.concatenate([Training_data_preprocessed, augmented_data_preprocessed], axis=0)\n",
-    "LEBEL = np.array(Training_lebel_preprocessed + augmented_lebel_preprocessed, dtype=np.int32)\n",
+    "LABEL = np.array(Training_label_preprocessed + augmented_label_preprocessed, dtype=np.int32)\n",
     "\n",
     "k = 5\n",
     "kf = KFold(n_splits=k, shuffle=True, random_state=seed)\n",
@@ -257,16 +222,58 @@
     "\n",
     "EVERY_Fold_data_train = [[] for i in range(k)]\n",
     "EVERY_Fold_data_val = [[] for i in range(k)]\n",
-    "EVERY_Fold_lebel_train = [[] for i in range(k)]\n",
-    "EVERY_Fold_lebel_val = [[] for i in range(k)]\n",
+    "EVERY_Fold_label_train = [[] for i in range(k)]\n",
+    "EVERY_Fold_label_val = [[] for i in range(k)]\n",
     "\n",
     "for i, (train_idx, val_idx) in enumerate(folds):\n",
     "    EVERY_Fold_data_train[i].append(DATA[train_idx])\n",
-    "    EVERY_Fold_lebel_train[i].append(LEBEL[train_idx])\n",
+    "    EVERY_Fold_label_train[i].append(LABEL[train_idx])\n",
     "    EVERY_Fold_data_val[i].append(DATA[val_idx])\n",
-    "    EVERY_Fold_lebel_val[i].append(LEBEL[val_idx])\n",
+    "    EVERY_Fold_label_val[i].append(LABEL[val_idx])\n",
     "\n",
     "print(\"Preprocessing and fold assignment complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd9e8c2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing test dataset...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                        "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing complete!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Preprocessing test dataset...\")\n",
+    "DATA_array_test = load_data(heart_sound_test)\n",
+    "Test_data, Test_label = preprocessing(DATA_array_test, LABEL_array_test, length=1000)\n",
+    "print(\"Preprocessing complete!\")"
    ]
   },
   {
@@ -279,26 +286,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 8000, 4, 256)\n",
-      "(5, 8000)\n",
-      "(5, 2000, 4, 256)\n",
-      "(5, 2000)\n"
+      "(5, 7200, 256, 4, 1)\n",
+      "(5, 7200)\n",
+      "(5, 1800, 256, 4, 1)\n",
+      "(5, 1800)\n",
+      "(1000, 256, 4, 1)\n",
+      "(1000,)\n"
      ]
     }
    ],
    "source": [
     "EVERY_Fold_data_train_download=[[],[],[],[],[]]\n",
-    "EVERY_Fold_lebel_train_download=[[],[],[],[],[]]\n",
+    "EVERY_Fold_label_train_download=[[],[],[],[],[]]\n",
     "EVERY_Fold_data_val_download=[[],[],[],[],[]]\n",
-    "EVERY_Fold_lebel_val_download=[[],[],[],[],[]]\n",
+    "EVERY_Fold_label_val_download=[[],[],[],[],[]]\n",
     "for i in range(5):EVERY_Fold_data_train_download[i] = EVERY_Fold_data_train[i][0]\n",
-    "for i in range(5):EVERY_Fold_lebel_train_download[i] = EVERY_Fold_lebel_train[i][0]\n",
+    "for i in range(5):EVERY_Fold_label_train_download[i] = EVERY_Fold_label_train[i][0]\n",
     "for i in range(5):EVERY_Fold_data_val_download[i] = EVERY_Fold_data_val[i][0]\n",
-    "for i in range(5):EVERY_Fold_lebel_val_download[i] = EVERY_Fold_lebel_val[i][0]\n",
+    "for i in range(5):EVERY_Fold_label_val_download[i] = EVERY_Fold_label_val[i][0]\n",
     "print(np.shape(EVERY_Fold_data_train_download))\n",
-    "print(np.shape(EVERY_Fold_lebel_train_download))\n",
+    "print(np.shape(EVERY_Fold_label_train_download))\n",
     "print(np.shape(EVERY_Fold_data_val_download))\n",
-    "print(np.shape(EVERY_Fold_lebel_val_download))"
+    "print(np.shape(EVERY_Fold_label_val_download))\n",
+    "print(np.shape(Test_data))\n",
+    "print(np.shape(Test_label))"
    ]
   },
   {
@@ -311,15 +322,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data have lebel normal : 49.91% and have lebel abnormal : 50.09%\n",
-      "Validation data have lebel normal : 51.40% and have lebel abnormal : 48.60%\n"
+      "Train data have lebel normal : 49.58% and have lebel abnormal : 50.42%\n",
+      "Validation data have lebel normal : 49.94% and have lebel abnormal : 50.06%\n",
+      "Test data have lebel normal : 50.20% and have lebel abnormal : 49.80%\n"
      ]
     }
    ],
    "source": [
-    "train_fraction , test_fraction = len(LEBEL)*(k-1)/(100*k) , len(LEBEL)/(100*k)\n",
-    "print(f'Train data have lebel normal : {(list(EVERY_Fold_lebel_train_download[0]).count(0))/train_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_lebel_train_download[0]).count(1))/train_fraction:.2f}%')\n",
-    "print(f'Validation data have lebel normal : {(list(EVERY_Fold_lebel_val_download[0]).count(0))/test_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_lebel_val_download[0]).count(1))/test_fraction:.2f}%')"
+    "train_fraction , val_fraction = len(LABEL)*(k-1)/(100*k) , len(LABEL)/(100*k)\n",
+    "print(f'Train data have lebel normal : {(list(EVERY_Fold_label_train_download[0]).count(0))/train_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_label_train_download[0]).count(1))/train_fraction:.2f}%')\n",
+    "print(f'Validation data have lebel normal : {(list(EVERY_Fold_label_val_download[0]).count(0))/val_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_label_val_download[0]).count(1))/val_fraction:.2f}%')\n",
+    "print(f'Test data have lebel normal : {100*(list(Test_label).count(0))/len(Test_label):.2f}% and have lebel abnormal : {100*(list(Test_label).count(1))/len(Test_label):.2f}%')"
    ]
   },
   {
@@ -330,15 +343,17 @@
    "outputs": [],
    "source": [
     "np.save(f'{DATA_type}/Train_data.npy', EVERY_Fold_data_train_download)\n",
-    "np.save(f'{DATA_type}/Train_lebel.npy', EVERY_Fold_lebel_train_download)\n",
+    "np.save(f'{DATA_type}/Train_lebel.npy', EVERY_Fold_label_train_download)\n",
     "np.save(f'{DATA_type}/Val_data.npy', EVERY_Fold_data_val_download)\n",
-    "np.save(f'{DATA_type}/Val_lebel.npy', EVERY_Fold_lebel_val_download)"
+    "np.save(f'{DATA_type}/Val_lebel.npy', EVERY_Fold_label_val_download)\n",
+    "np.save(f'{DATA_type}/Test_data.npy', Test_data)\n",
+    "np.save(f'{DATA_type}/Test_lebel.npy', Test_label)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tensorflowgpu",
    "language": "python",
    "name": "python3"
   },
