--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -1,51 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "523684d7",
-   "metadata": {},
-   "source": [
-    "Last Modified: Home"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7e75e7a1-9ddd-4734-8ff9-424dee2dfc23",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import gc\n",
-    "import glob\n",
-    "import random\n",
-    "import librosa\n",
     "import itertools\n",
-    "import IPython.display\n",
-    "import librosa.display\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "import matplotlib as plt\n",
-    "import IPython.display as ipd\n",
-    "import matplotlib.pyplot as plt\n",
     "import keras.backend as K\n",
-    "from tqdm import tqdm\n",
-    "from collections import Counter\n",
-    "from scipy.signal import butter, lfilter\n",
-    "from IPython.display import clear_output\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "import matplotlib.pyplot as plt\n",
     "from keras import models, layers, Input\n",
-    "from keras.layers import Input, Conv2D, BatchNormalization, Activation, MaxPooling2D, Dropout, Reshape, LSTM, Dense\n",
-    "from keras.metrics import Recall, Metric\n",
-    "from keras.callbacks import EarlyStopping, LearningRateScheduler, ReduceLROnPlateau, Callback\n",
+    "from keras.layers import Input\n",
+    "from keras.metrics import Metric\n",
+    "from IPython.display import clear_output\n",
+    "from keras.callbacks import ReduceLROnPlateau, Callback\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, precision_score, recall_score\n",
     "from keras.optimizers import Adam\n",
-    "from keras.regularizers import l1,l2\n",
-    "from sklearn.utils import shuffle, class_weight\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, accuracy_score, precision_score, recall_score, f1_score, roc_curve, auc, roc_auc_score\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split, KFold"
+    "from keras.regularizers import l2"
    ]
   },
   {
@@ -80,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "db538c22-b56c-46b3-9699-5c174d4b4cca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class F2Score(Metric):\n",
+    "class F2Score(tf.keras.metrics.Metric):\n",
     "    def __init__(self, name='f2_score', threshold=0.5, **kwargs):\n",
     "        super(F2Score, self).__init__(name=name, **kwargs)\n",
     "        self.threshold = threshold\n",
@@ -94,23 +70,18 @@
     "        self.fn = self.add_weight(name='fn', initializer='zeros')\n",
     "\n",
     "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
-    "        y_pred = K.cast(y_pred > self.threshold, 'float32')\n",
-    "        y_true = K.cast(y_true, 'float32')\n",
-    "\n",
-    "        tp = K.sum(y_true * y_pred)\n",
-    "        fp = K.sum((1 - y_true) * y_pred)\n",
-    "        fn = K.sum(y_true * (1 - y_pred))\n",
-    "\n",
-    "        self.tp.assign_add(tp)\n",
-    "        self.fp.assign_add(fp)\n",
-    "        self.fn.assign_add(fn)\n",
+    "        y_pred = tf.cast(y_pred > self.threshold, tf.float32)\n",
+    "        y_true = tf.cast(y_true, tf.float32)\n",
+    "        self.tp.assign_add(tf.reduce_sum(y_true * y_pred))\n",
+    "        self.fp.assign_add(tf.reduce_sum((1 - y_true) * y_pred))\n",
+    "        self.fn.assign_add(tf.reduce_sum(y_true * (1 - y_pred)))\n",
     "\n",
     "    def result(self):\n",
-    "        precision = self.tp / (self.tp + self.fp + K.epsilon())\n",
-    "        recall = self.tp / (self.tp + self.fn + K.epsilon())\n",
-    "        return 5 * (precision * recall) / (4 * precision + recall + K.epsilon())\n",
+    "        precision = self.tp / (self.tp + self.fp + tf.keras.backend.epsilon())\n",
+    "        recall = self.tp / (self.tp + self.fn + tf.keras.backend.epsilon())\n",
+    "        return 5 * (precision * recall) / (4 * precision + recall + tf.keras.backend.epsilon())\n",
     "\n",
-    "    def reset_states(self):\n",
+    "    def reset_state(self):\n",
     "        self.tp.assign(0)\n",
     "        self.fp.assign(0)\n",
     "        self.fn.assign(0)\n",
@@ -120,14 +91,14 @@
     "        super().__init__()\n",
     "        self.monitor = monitor\n",
     "        self.mode = mode\n",
-    "        \n",
+    "\n",
     "        if self.mode == 'min':\n",
-    "            self.best = np.inf\n",
+    "            self.best = np.Inf\n",
     "            self.monitor_op = np.less\n",
     "        else:\n",
-    "            self.best = -np.inf\n",
+    "            self.best = -np.Inf\n",
     "            self.monitor_op = np.greater\n",
-    "        \n",
+    "\n",
     "        self.best_weights = None\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
@@ -135,7 +106,9 @@
     "        if current is None:return\n",
     "        if self.monitor_op(current, self.best):\n",
     "            self.best = current\n",
-    "            self.best_weights = self.model.get_weights()\n",
+    "            try:self.best_weights = self.model.get_weights()\n",
+    "            except Exception as e:\n",
+    "                print(f\"[Warning] Failed to get weights at epoch {epoch}: {e}\")\n",
     "\n",
     "    def on_train_end(self, logs=None):\n",
     "        if self.best_weights is not None:\n",
@@ -322,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5477322a-ee50-4fdf-ae92-450ac514676e",
    "metadata": {},
    "outputs": [
@@ -361,16 +334,16 @@
     "\n",
     "print(\"Best Model Metric\")\n",
     "print(\"-\" * 40)\n",
-    "print(f\"Config ID           : {best_model_config_id}\")\n",
-    "print(f\"Batch Size          : {best_result['batch_size']}\")\n",
-    "print(f\"Learning Rate       : {best_result['learning_rate']}\")\n",
-    "print(f\"Hidden Units        : {best_result['hidden_size']}\")\n",
-    "print(f\"Dropout Rate        : {best_result['dropout']}\")\n",
-    "print(f\"Kernel Reg L2       : {best_result['kernel_reg']}\")\n",
-    "print(f\"Avg Recall (5-fold) : {best_result['avg_val_recall']:.4f}\")\n",
-    "print(f\"Best Fold Recall    : {best_result['best_recall']:.4f}\")\n",
+    "print(f\"Config ID             : {best_model_config_id}\")\n",
+    "print(f\"Batch Size            : {best_result['batch_size']}\")\n",
+    "print(f\"Learning Rate         : {best_result['learning_rate']}\")\n",
+    "print(f\"Hidden Units          : {best_result['hidden_size']}\")\n",
+    "print(f\"Dropout Rate          : {best_result['dropout']}\")\n",
+    "print(f\"Kernel Reg L2         : {best_result['kernel_reg']}\")\n",
+    "print(f\"Avg Recall (5-fold)   : {best_result['avg_val_recall']:.4f}\")\n",
+    "print(f\"Best Fold Recall      : {best_result['best_recall']:.4f}\")\n",
     "print(f\"Avg F2-score (5-fold) : {best_result['avg_val_f2']:.4f}\")\n",
-    "print(f\"Best Fold F2-score  : {best_result['best_f2']:.4f}\")\n",
+    "print(f\"Best Fold F2-score    : {best_result['best_f2']:.4f}\")\n",
     "print(\"-\" * 40)\n",
     "\n",
     "best_history = best_model['history']\n",
